--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+*qmd
 
 # R Environment Variables
 .Renviron
@@ -51,3 +52,5 @@ raw/
 data/
 
 # html file
+
+/.quarto/
