--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 book:
-  title: "社会調査のためのR"
+  title: "社会調査のためのR入門"
   author: "藤原翔（東京大学社会科学研究所）"
   date: "`r Sys.Date()`"
   chapters:
@@ -19,7 +19,9 @@ bibliography: references.bib
 format:
   html:
     theme: cosmo
-
+    embed-resources: true
+    standalone: true
+    
 crossref:
   fig-title: 図     # (default is "Figure")
   tbl-title: 表     # (default is "Table")
